2014-Nov-25 cpo		Tag V08-01-11.  Add const accessor to IndexList.hh to allow software to convert eventcode-bits to actual event-codes.
2014-Nov-25 weaver	Tag V08-01-10.  Added Quartz::ConfigV2 for hw ROI.
2014-Nov-18 weaver	Tag V08-01-09.  Added TimeTool::ConfigV2,DataV2.  Fix to XtcMonitorServer for slow clients.
2014-Oct-14 weaver	Tag V08-01-07.  Added BldDataSpectrometerV1.
2014-Oct-13 weaver	Tag V08-01-06.  Added Epix100a, built with ddl 'devel' tag.
2014-Oct-05 jana	Tag V08-01-05.  Adds some XCS BLD IPIMBs to BldInfo and latest changes to epix.ddl excluding epix100a and elementV2.  Derived from psddldata V01-00-16.
2014-Oct-01 weaver      Tag V08-01-04.  Adds EvrData::IOConfigV2.  Derived from psddldata V01-00-15.
			Tag V08-01-03.  Adds TimeTool::DataV1.
2014-Sep-15 weaver	Tag V08-01-02.  Derived from psddldata V01-00-13.  Adds TimeTool config and GenericPgp config types.
					Adds L3T::DataV2 type with unbiased selection flag, also in L1AcceptEnv.
2014-Sep-08 cpo 	Tag V08-01-01.  Tomy and Chris move pragma-pack in index/IndexList.hh
                                        to avoid bug in std:map<int,int> that caused
                                        cctbx crystallography software to crash
2014-Aug-13 weaver	Tag V08-01-00.  Change to L3TModule interface to supply configuration information.
2014-Jul-31 weaver	Updated xtcmonserver to cleanup message queues.
2014-Jul-03 jana	Tag V08-00-12	Added support for ebeam BLD v6 to app/*reader.cc.  Uses psddldata V01-00-12.
2014-Jun-30 cpo		Tag V08-00-11.  Added 3 photon-energy related doubles to ebeam bld.  uses psddldata v01-00-11.
2014-Jun-27 weaver	Tag V08-00-10.  Fixed XtcMonitorServer extra buffer recovery for retiring clients.
					Removed all potential mq_send blocks.
2014-Jun-13 jana        Tag V08-00-09.  Added 2 PMT quantities to Gas Detector BLD data type
	                                Modified bldreader, cfgreader, xtcreader appropriately.
					Uses psddldata tag V01-00-10