@@ -1,3 +1,4 @@
+2015-Feb-20 caf         Tag V08-02-04.  Adds EvrData::DataV4.  Derived from psddldata V01-00-26.
 2014-Nov-25 cpo		Tag V08-01-11.  Add const accessor to IndexList.hh to allow software to convert eventcode-bits to actual event-codes.
 2014-Nov-25 weaver	Tag V08-01-10.  Added Quartz::ConfigV2 for hw ROI.
 2014-Nov-18 weaver	Tag V08-01-09.  Added TimeTool::ConfigV2,DataV2.  Fix to XtcMonitorServer for slow clients.
